src/main/metadata/objects/IntegrationURL_parameters__mdt.object
<CustomObject>
    <description>It contains different parameters which will be send to external systems by appending them to Integration URL.</description>
    <fields>
        <fullName>Market__c</fullName>
        <description>It contains the market code.</description>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <description>It contains parameters which would be send to Informatica or any external System through API call.</description>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IntegrationURL parameters</label>
    <pluralLabel>IntegrationURL parameters</pluralLabel>
</CustomObject>